--- a/site/css/main.css
+++ b/site/css/main.css
@@ -1,4 +1,4 @@
-.menu.svelte-rkb2fr.svelte-rkb2fr{height:60px}ul.svelte-rkb2fr.svelte-rkb2fr{list-style:none;display:flex;justify-content:space-around;margin:0}ul.svelte-rkb2fr li.svelte-rkb2fr{color:var(--text);cursor:pointer}ul.svelte-rkb2fr li.svelte-rkb2fr:hover{color:var(--hover);border-bottom:1px solid}small.user.svelte-rkb2fr.svelte-rkb2fr{display:block;text-align:center}
+.menu.svelte-19y2pso.svelte-19y2pso{height:60px;background-color:#0f0f0f;color:white;border-radius:10px}ul.svelte-19y2pso.svelte-19y2pso{list-style:none;display:flex;justify-content:space-around;margin:0}ul.svelte-19y2pso li.svelte-19y2pso{color:var(--text);cursor:pointer;color:inherit}ul.svelte-19y2pso li.svelte-19y2pso:hover{color:var(--hover)}small.user.svelte-19y2pso.svelte-19y2pso{display:block;text-align:center}a.svelte-19y2pso.svelte-19y2pso{cursor:pointer}
 input.svelte-gwqplq{width:100%}
 
 /*# sourceMappingURL=main.css.map */
