--- a/site/css/main.css
+++ b/site/css/main.css
@@ -1,4 +1,4 @@
-.menu.svelte-19y2pso.svelte-19y2pso{height:60px;background-color:#0f0f0f;color:white;border-radius:10px}ul.svelte-19y2pso.svelte-19y2pso{list-style:none;display:flex;justify-content:space-around;margin:0}ul.svelte-19y2pso li.svelte-19y2pso{color:var(--text);cursor:pointer;color:inherit}ul.svelte-19y2pso li.svelte-19y2pso:hover{color:var(--hover)}small.user.svelte-19y2pso.svelte-19y2pso{display:block;text-align:center}a.svelte-19y2pso.svelte-19y2pso{cursor:pointer}
+.menu.svelte-1o4qvu4.svelte-1o4qvu4{border-radius:5px}ul.svelte-1o4qvu4.svelte-1o4qvu4{list-style:none;display:flex;justify-content:space-around;margin:0}ul.svelte-1o4qvu4 li.svelte-1o4qvu4{color:var(--text);cursor:pointer;color:inherit}ul.svelte-1o4qvu4 li.svelte-1o4qvu4:hover{color:var(--text)}small.user.svelte-1o4qvu4.svelte-1o4qvu4{display:block;text-align:center}a.svelte-1o4qvu4.svelte-1o4qvu4{cursor:pointer}
 input.svelte-gwqplq{width:100%}
 
 /*# sourceMappingURL=main.css.map */
